# semantic-layer-eval

./: .env.example  .gitignore  LICENSE  README.md  db.py  init.sh  progress.json  progress.txt  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  analyst.py  base.py  reference_agent.py  system_prompt.md
config/: companies.yml
eval/: __init__.py  adversarial_set.yml  golden_set.yml  harness.py  metrics.py  test_eval.py
eval/report/: eval_report.md
fixtures/: raw_companies.parquet  raw_facts.parquet
ground_truth/: __init__.py  truth_sql.py
ingest/: __init__.py  fetch_edgar.py  load_fixture.py
mcp_server/: __init__.py  compiler.py  server.py  tools.py
scripts/: demo.py
semantic_layer/: __init__.py  loader.py  metrics.yml
tests/: test_agent.py  test_compiler.py  test_db_routing.py  test_no_raw_sql.py  test_semantic_layer.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/models/marts/: _marts.yml  fct_company_year.sql
transform/models/staging/: _sources.yml  stg_companies.sql  stg_facts.sql  stg_financials.sql
transform/tests/: assert_revenue_anchors.sql  assert_unique_company_year.sql  assert_yoy_requires_consecutive_year.sql
