[project]
name = "semantic-layer-eval"
version = "0.1.0"
description = "Governing the AI Analyst: a forced-through semantic layer over real SEC SaaS financials, an MCP server that exposes only governed metrics, and a DeepEval harness that catches wrong numbers and proves refusal."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Mike Rasmussen", email = "mrasmussen595@gmail.com" }]

dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Split into extras because dbt-core and deepeval have heavy, sometimes-competing
# dependency trees. init.sh installs everything; CI installs only what each job needs.
transform = ["dbt-duckdb>=1.8"]
mcp = ["mcp>=1.2", "anthropic>=0.40"]
eval = ["deepeval>=1.0"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
